--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-        <a-marker type='pattern' url='res/pattern-marker.patt'>
+        <!--<a-marker type='pattern' url='res/pattern-marker.patt'>-->
+		<a-marker type='pattern' url='res/pattern-marry.patt'>
             <!--<a-entity position='5 10 -12' rotation="-20 0 0" gltf-model="url(res/scene.gltf)"></a-entity>-->
 			<a-entity position='30 -55 3' rotation="60 180 0" gltf-model="url(res/marry/scene.gltf)"></a-entity>
         </a-marker>
