--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <!--<a-marker type='pattern' url='res/pattern-marker.patt'>-->
 		<a-marker type='pattern' url='res/pattern-marry.patt'>
             <!--<a-entity position='5 10 -12' rotation="-20 0 0" gltf-model="url(res/scene.gltf)"></a-entity>-->
-			<a-entity position='30 -55 3' rotation="60 180 0" gltf-model="url(res/marry/scene.gltf)"></a-entity>
+			<!--<a-entity position='30 -55 3' rotation="60 180 0" gltf-model="url(res/marry/scene.gltf)"></a-entity>-->
+			<a-entity position='30 -15 3' rotation="60 180 0" gltf-model="url(res/marry/scene.gltf)"></a-entity>
         </a-marker>
     </a-scene>
 </body>
